--- a/project/database/.env.example
+++ b/project/database/.env.example
@@ -4,7 +4,7 @@
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
-DB_PASS=NetSimCPP1234
+DB_PASS=DevPassword123!
 DB_NAME=netsim
 
 # WARNING: Never commit .env file to git!
