fix: Add yaml-cpp dependency to CI/CD and installation scripts
- Add libyaml-cpp-dev to GitHub Actions workflow
- Update install_deps.sh with yaml-cpp installation
- Update install_auth_deps.sh with yaml-cpp
- Update README.md with complete dependency list
- Update PlantUML diagrams with new features:
  * system_overview: Added WebSocket, Auth, Scenarios, Redis
  * hybrid_architecture: Added Scenario State, Auth Layer, Redis
  * docker_deployment: Added Redis container and ports
  * cicd_pipeline: Added Redis service, 61 tests, new dependencies

This fixes the CMake error: 'Could not find a package configuration file provided by yaml-cpp'

Related to scenario system implementation that requires YAML parsing.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -59,6 +59,7 @@ jobs:
           libboost-thread-dev \
           libhiredis-dev \
           libargon2-dev \
+          libyaml-cpp-dev \
           mysql-client
     
     - name: Install header-only libraries (jwt-cpp, picojson)
