--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,9 +95,19 @@ services:
     container_name: netsim-tests
     command: ["./netsim_tests"]
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
       - DB_HOST=mysql
+      - DB_PORT=3306
+      - DB_USER=${DB_USER:-root}
+      - DB_PASS=${DB_ROOT_PASSWORD:-DevPassword123!}
+      - DB_NAME=${DB_NAME:-netsim}
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASS=${REDIS_PASSWORD:-DevPassword123!}
       - DB_PORT=3306
       - DB_USER=root
       - DB_PASS=NetSimCPP1234
