--- a/project/backend/CMakeLists.txt
+++ b/project/backend/CMakeLists.txt
@@ -62,6 +62,7 @@ endif()
 if(NOT YAML_CPP_FOUND)
     find_package(yaml-cpp QUIET)
     if(yaml-cpp_FOUND OR YAML_CPP_FOUND)
+        set(YAML_CPP_FOUND TRUE)
         message(STATUS "Found yaml-cpp via find_package")
         if(NOT YAML_CPP_LIBRARIES)
             set(YAML_CPP_LIBRARIES yaml-cpp)
