fix: Build yaml-cpp from source in Docker for CMake config support
Ubuntu 22.04's libyaml-cpp-dev lacks CMake config files, causing
find_package(yaml-cpp CONFIG) to fail.

Changes:
1. Dockerfile: Remove libyaml-cpp-dev from apt-get
2. Dockerfile: Build yaml-cpp from source with CMake config enabled
   - Clone from github.com/jbeder/yaml-cpp
   - Build with YAML_BUILD_SHARED_LIBS=ON
   - Install to /usr/local with proper ldconfig
3. CMakeLists.txt: Remove cmake_policy(SET CMP0167 OLD) - not needed with CMake 3.16
4. CMakeLists.txt: Simplify yaml-cpp detection to just CONFIG REQUIRED
5. CMakeLists.txt: Remove TARGET check, add HAVE_YAML_SUPPORT definition

This ensures yaml-cpp is properly detected with full CMake support.
Build time: ~1 minute added to Docker build.

--- a/project/backend/CMakeLists.txt
+++ b/project/backend/CMakeLists.txt
@@ -3,9 +3,6 @@ project(NetSimCPP VERSION 0.1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Silence Boost FindBoost deprecation warning
-cmake_policy(SET CMP0167 OLD)
-
 find_package(cpprestsdk REQUIRED) # Microsoft C++ REST SDK
 find_package(nlohmann_json REQUIRED)
 find_package(OpenSSL REQUIRED)
@@ -54,14 +51,9 @@ find_path(PICOJSON_INCLUDE picojson.h PATHS /usr/include /usr/local/include)
 
 # YAML-CPP for scenario files - REQUIRED
 find_package(yaml-cpp CONFIG REQUIRED)
-
-if(NOT TARGET yaml-cpp)
-    message(FATAL_ERROR "yaml-cpp was not found even though libyaml-cpp-dev is installed.")
-endif()
-
 message(STATUS "Found yaml-cpp via CMake config")
-
 set(YAML_CPP_LIBRARIES yaml-cpp)
+add_compile_definitions(HAVE_YAML_SUPPORT)
 
 # All dependencies found - enable full features
 add_compile_definitions(HAVE_MYSQL_SUPPORT)
