fix: Add yaml-cpp source build to CI/CD workflow
The CI/CD workflow was using libyaml-cpp-dev from apt-get, which lacks
CMake config files. This caused find_package(yaml-cpp CONFIG) to fail.

Changes:
1. CI/CD: Remove libyaml-cpp-dev from apt-get in both jobs
2. CI/CD: Add 'Build and install yaml-cpp from source' step to:
   - build-and-test job
   - performance-tests job
3. CMakeLists.txt: Add /usr/local/lib/cmake/yaml-cpp to CMAKE_PREFIX_PATH

This matches the Dockerfile approach and ensures yaml-cpp is properly
detected in all environments (Docker, CI/CD, local builds).

The source build takes ~30 seconds and provides full CMake support.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -60,8 +60,18 @@ jobs:
           libboost-thread-dev \
           libhiredis-dev \
           libargon2-dev \
-          libyaml-cpp-dev \
           mysql-client
+    
+    - name: Build and install yaml-cpp from source
+      run: |
+        git clone https://github.com/jbeder/yaml-cpp.git /tmp/yaml-cpp
+        cd /tmp/yaml-cpp
+        mkdir build && cd build
+        cmake .. -DBUILD_SHARED_LIBS=ON -DYAML_BUILD_SHARED_LIBS=ON -DYAML_CPP_BUILD_TESTS=OFF
+        make -j$(nproc)
+        sudo make install
+        sudo ldconfig
+        echo "yaml-cpp built and installed from source"
     
     - name: Install header-only libraries (jwt-cpp, picojson)
       run: |
@@ -157,6 +167,17 @@ jobs:
           libhiredis-dev \
           libargon2-dev \
           valgrind
+    
+    - name: Build and install yaml-cpp from source
+      run: |
+        git clone https://github.com/jbeder/yaml-cpp.git /tmp/yaml-cpp
+        cd /tmp/yaml-cpp
+        mkdir build && cd build
+        cmake .. -DBUILD_SHARED_LIBS=ON -DYAML_BUILD_SHARED_LIBS=ON -DYAML_CPP_BUILD_TESTS=OFF
+        make -j$(nproc)
+        sudo make install
+        sudo ldconfig
+        echo "yaml-cpp built and installed from source"
     
     - name: Install header-only libraries (jwt-cpp, picojson)
       run: |
