--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "jsdom": "^27.0.1",
+    "mock-socket": "^9.3.1",
     "postcss": "^8.5.6",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
