--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,8 +3,21 @@ events {
 }
 
 http {
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 4096;
+
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
     upstream netsim_backend {
-        server netsim-app:8080;
+        server backend:8080;
+    }
+
+    upstream netsim_ws {
+        server backend:9001;
     }
 
     # Rate limiting
@@ -31,6 +44,9 @@ http {
         listen 443 ssl http2;
         server_name _;
 
+        root /usr/share/nginx/html;
+        index index.html;
+
         # SSL configuration
         ssl_certificate /etc/letsencrypt/live/your-domain.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/your-domain.com/privkey.pem;
@@ -52,7 +68,7 @@ http {
         location /api/ {
             limit_req zone=api_limit burst=20 nodelay;
             
-            proxy_pass http://netsim_backend;
+            proxy_pass http://netsim_backend/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -72,7 +88,7 @@ http {
         location /api/auth/ {
             limit_req zone=auth_limit burst=10 nodelay;
             
-            proxy_pass http://netsim_backend;
+            proxy_pass http://netsim_backend/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -81,7 +97,7 @@ http {
 
         # WebSocket endpoint
         location /ws {
-            proxy_pass http://netsim_backend;
+            proxy_pass http://netsim_ws;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
@@ -93,6 +109,11 @@ http {
             # WebSocket timeout
             proxy_read_timeout 3600s;
             proxy_send_timeout 3600s;
+        }
+
+        # SPA fallback + static assets
+        location / {
+            try_files $uri /index.html;
         }
 
         # Health check endpoint
