refactor: complete overhaul of auth context and protected routes

--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -13,6 +13,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.11",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
