--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ events {
 
 http {
     upstream netsim_backend {
-        server netsim-app:8080;
+        server netsim-app-prod:8080;
     }
 
     # Rate limiting
@@ -32,8 +32,8 @@ http {
         server_name _;
 
         # SSL configuration
-        ssl_certificate /etc/letsencrypt/live/your-domain.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/your-domain.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/netsim.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/netsim.com/privkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
