--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -65,7 +65,7 @@ services:
       - netsim-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/status"]
       interval: 30s
       timeout: 10s
       retries: 3
