--- a/project/backend/CMakeLists.txt
+++ b/project/backend/CMakeLists.txt
@@ -3,51 +3,65 @@ project(NetSimCPP VERSION 0.1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+option(BUILD_FUZZER "Build scenario fuzzer" OFF)
+
 find_package(cpprestsdk REQUIRED) # Microsoft C++ REST SDK
 find_package(nlohmann_json REQUIRED)
 find_package(OpenSSL REQUIRED)
 find_package(Boost REQUIRED COMPONENTS system thread) # For WebSocket
 
-# MySQL Connector/C++ - REQUIRED for database persistence
-find_library(MYSQLCPPCONN_LIB mysqlcppconn REQUIRED)
-find_path(MYSQLCPPCONN_INCLUDE mysql_driver.h PATH_SUFFIXES mysql-cppconn-8 mysql-cppconn REQUIRED)
+if(NOT BUILD_FUZZER)
+  # MySQL Connector/C++ - REQUIRED for database persistence
+  find_library(MYSQLCPPCONN_LIB mysqlcppconn)
+  find_path(MYSQLCPPCONN_INCLUDE mysql_driver.h PATH_SUFFIXES mysql-cppconn-8 mysql-cppconn)
 
-if(NOT MYSQLCPPCONN_LIB)
-    message(FATAL_ERROR "MySQL Connector/C++ is required but not found")
+  if(NOT MYSQLCPPCONN_LIB)
+    message(FATAL_ERROR "MySQL Connector/C++ is required but not found. Please install it or build the fuzzer with -DBUILD_FUZZER=ON to disable this dependency.")
+  endif()
+  message(STATUS "MySQL Connector/C++ found: ${MYSQLCPPCONN_LIB}")
+  add_compile_definitions(HAVE_MYSQL_SUPPORT)
 endif()
-message(STATUS "MySQL Connector/C++ found: ${MYSQLCPPCONN_LIB}")
 
 # WebSocket++ (header-only library)
 find_path(WEBSOCKETPP_INCLUDE websocketpp/server.hpp PATHS /usr/include /usr/local/include)
 
-# Redis client (hiredis) - REQUIRED
-find_library(HIREDIS_LIB hiredis REQUIRED)
-find_path(HIREDIS_INCLUDE hiredis/hiredis.h PATHS /usr/include /usr/local/include REQUIRED)
+if(NOT BUILD_FUZZER)
+  # Redis client (hiredis) - REQUIRED
+  find_library(HIREDIS_LIB hiredis)
+  find_path(HIREDIS_INCLUDE hiredis/hiredis.h PATHS /usr/include /usr/local/include)
 
-if(NOT HIREDIS_LIB)
+  if(NOT HIREDIS_LIB)
     message(FATAL_ERROR "Redis (hiredis) is required but not found")
+  endif()
+  message(STATUS "Redis (hiredis) found: ${HIREDIS_LIB}")
+  add_compile_definitions(HAVE_REDIS_SUPPORT)
 endif()
-message(STATUS "Redis (hiredis) found: ${HIREDIS_LIB}")
 
-# Argon2 for password hashing - REQUIRED
-find_library(ARGON2_LIB argon2 REQUIRED)
-find_path(ARGON2_INCLUDE argon2.h PATHS /usr/include /usr/local/include REQUIRED)
+if(NOT BUILD_FUZZER)
+  # Argon2 for password hashing - REQUIRED
+  find_library(ARGON2_LIB argon2)
+  find_path(ARGON2_INCLUDE argon2.h PATHS /usr/include /usr/local/include)
 
-if(NOT ARGON2_LIB)
+  if(NOT ARGON2_LIB)
     message(FATAL_ERROR "Argon2 is required but not found")
+  endif()
+  message(STATUS "Argon2 found: ${ARGON2_LIB}")
+  add_compile_definitions(HAVE_ARGON2_SUPPORT)
 endif()
-message(STATUS "Argon2 found: ${ARGON2_LIB}")
 
-# JWT-CPP (header-only library) - REQUIRED
-find_path(JWT_CPP_INCLUDE jwt-cpp/jwt.h PATHS /usr/include /usr/local/include REQUIRED)
+if(NOT BUILD_FUZZER)
+  # JWT-CPP (header-only library) - REQUIRED
+  find_path(JWT_CPP_INCLUDE jwt-cpp/jwt.h PATHS /usr/include /usr/local/include)
 
-if(NOT JWT_CPP_INCLUDE)
+  if(NOT JWT_CPP_INCLUDE)
     message(FATAL_ERROR "JWT-CPP is required but not found")
-endif()
-message(STATUS "JWT-CPP found: ${JWT_CPP_INCLUDE}")
+  endif()
+  message(STATUS "JWT-CPP found: ${JWT_CPP_INCLUDE}")
+  add_compile_definitions(HAVE_JWT_SUPPORT)
 
-# PicoJSON (required by jwt-cpp)
-find_path(PICOJSON_INCLUDE picojson.h PATHS /usr/include /usr/local/include)
+  # PicoJSON (required by jwt-cpp)
+  find_path(PICOJSON_INCLUDE picojson.h PATHS /usr/include /usr/local/include)
+endif()
 
 # YAML-CPP for scenario files - REQUIRED
 # Add /usr/local to CMAKE_PREFIX_PATH for yaml-cpp built from source
@@ -57,15 +71,10 @@ message(STATUS "Found yaml-cpp via CMake config")
 set(YAML_CPP_LIBRARIES yaml-cpp)
 add_compile_definitions(HAVE_YAML_SUPPORT)
 
-# All dependencies found - enable full features
-add_compile_definitions(HAVE_MYSQL_SUPPORT)
-add_compile_definitions(HAVE_REDIS_SUPPORT)
-add_compile_definitions(HAVE_ARGON2_SUPPORT)
-add_compile_definitions(HAVE_JWT_SUPPORT)
 add_compile_definitions(HAVE_YAML_SUPPORT)
 
 if(WEBSOCKETPP_INCLUDE)
-    add_compile_definitions(HAVE_WEBSOCKET_SUPPORT)
+  add_compile_definitions(HAVE_WEBSOCKET_SUPPORT)
 endif()
 
 add_executable(netsim
@@ -80,46 +89,52 @@ add_executable(netsim
     src/scenario/ScenarioRunner.cpp
 )
 
-target_include_directories(netsim PRIVATE 
-    src 
+target_include_directories(netsim PRIVATE
+    src
     ${Boost_INCLUDE_DIRS}
 )
 
-if(MYSQLCPPCONN_INCLUDE)
-    target_include_directories(netsim PRIVATE ${MYSQLCPPCONN_INCLUDE})
+if(NOT BUILD_FUZZER AND MYSQLCPPCONN_INCLUDE)
+  target_include_directories(netsim PRIVATE ${MYSQLCPPCONN_INCLUDE})
 endif()
 if(WEBSOCKETPP_INCLUDE)
-    target_include_directories(netsim PRIVATE ${WEBSOCKETPP_INCLUDE})
+  target_include_directories(netsim PRIVATE ${WEBSOCKETPP_INCLUDE})
 endif()
-if(HIREDIS_INCLUDE)
-    target_include_directories(netsim PRIVATE ${HIREDIS_INCLUDE})
+if(NOT BUILD_FUZZER AND HIREDIS_INCLUDE)
+  target_include_directories(netsim PRIVATE ${HIREDIS_INCLUDE})
 endif()
-if(ARGON2_INCLUDE)
-    target_include_directories(netsim PRIVATE ${ARGON2_INCLUDE})
+if(NOT BUILD_FUZZER AND ARGON2_INCLUDE)
+  target_include_directories(netsim PRIVATE ${ARGON2_INCLUDE})
 endif()
-if(JWT_CPP_INCLUDE)
-    target_include_directories(netsim PRIVATE ${JWT_CPP_INCLUDE})
+if(NOT BUILD_FUZZER AND JWT_CPP_INCLUDE)
+  target_include_directories(netsim PRIVATE ${JWT_CPP_INCLUDE})
 endif()
-if(PICOJSON_INCLUDE)
-    target_include_directories(netsim PRIVATE ${PICOJSON_INCLUDE})
+if(NOT BUILD_FUZZER AND PICOJSON_INCLUDE)
+  target_include_directories(netsim PRIVATE ${PICOJSON_INCLUDE})
 endif()
 if(YAML_CPP_INCLUDE_DIRS)
-    target_include_directories(netsim PRIVATE ${YAML_CPP_INCLUDE_DIRS})
+  target_include_directories(netsim PRIVATE ${YAML_CPP_INCLUDE_DIRS})
 endif()
 
-target_link_libraries(netsim PRIVATE 
-    cpprestsdk::cpprest 
-    nlohmann_json::nlohmann_json 
-    OpenSSL::SSL 
+target_link_libraries(netsim PRIVATE
+    cpprestsdk::cpprest
+    nlohmann_json::nlohmann_json
+    OpenSSL::SSL
     OpenSSL::Crypto
     Boost::system
     Boost::thread
     pthread
-    ${MYSQLCPPCONN_LIB}
-    ${HIREDIS_LIB}
-    ${ARGON2_LIB}
     ${YAML_CPP_LIBRARIES}
 )
+if(NOT BUILD_FUZZER AND MYSQLCPPCONN_LIB)
+  target_link_libraries(netsim PRIVATE ${MYSQLCPPCONN_LIB})
+endif()
+if(NOT BUILD_FUZZER AND HIREDIS_LIB)
+  target_link_libraries(netsim PRIVATE ${HIREDIS_LIB})
+endif()
+if(NOT BUILD_FUZZER AND ARGON2_LIB)
+  target_link_libraries(netsim PRIVATE ${ARGON2_LIB})
+endif()
 
 # Optional: install rules
 install(TARGETS netsim DESTINATION bin)
@@ -136,33 +151,33 @@ add_executable(netsim_tests
     src/core/Host.cpp
     src/core/Router.cpp
 )
-target_include_directories(netsim_tests PRIVATE 
-    src 
+target_include_directories(netsim_tests PRIVATE
+    src
     ${Boost_INCLUDE_DIRS}
 )
-if(MYSQLCPPCONN_INCLUDE)
-    target_include_directories(netsim_tests PRIVATE ${MYSQLCPPCONN_INCLUDE})
+if(NOT BUILD_FUZZER AND MYSQLCPPCONN_INCLUDE)
+  target_include_directories(netsim_tests PRIVATE ${MYSQLCPPCONN_INCLUDE})
 endif()
 if(WEBSOCKETPP_INCLUDE)
-    target_include_directories(netsim_tests PRIVATE ${WEBSOCKETPP_INCLUDE})
+  target_include_directories(netsim_tests PRIVATE ${WEBSOCKETPP_INCLUDE})
 endif()
 if(YAML_CPP_INCLUDE_DIRS)
-    target_include_directories(netsim_tests PRIVATE ${YAML_CPP_INCLUDE_DIRS})
+  target_include_directories(netsim_tests PRIVATE ${YAML_CPP_INCLUDE_DIRS})
 endif()
 
-target_link_libraries(netsim_tests PRIVATE 
-    GTest::gtest_main 
-    cpprestsdk::cpprest 
+target_link_libraries(netsim_tests PRIVATE
+    GTest::gtest_main
+    cpprestsdk::cpprest
     nlohmann_json::nlohmann_json
-    OpenSSL::SSL 
+    OpenSSL::SSL
     OpenSSL::Crypto
     Boost::system
     Boost::thread
     pthread
     ${YAML_CPP_LIBRARIES}
 )
-if(MYSQLCPPCONN_LIB)
-    target_link_libraries(netsim_tests PRIVATE ${MYSQLCPPCONN_LIB})
+if(NOT BUILD_FUZZER AND MYSQLCPPCONN_LIB)
+  target_link_libraries(netsim_tests PRIVATE ${MYSQLCPPCONN_LIB})
 endif()
 add_test(NAME netsim_tests COMMAND netsim_tests)
 
@@ -176,28 +191,69 @@ add_executable(netsim_perf_tests
     src/core/Host.cpp
     src/core/Router.cpp
 )
-target_include_directories(netsim_perf_tests PRIVATE 
-    src 
+target_include_directories(netsim_perf_tests PRIVATE
+    src
     ${Boost_INCLUDE_DIRS}
 )
-if(MYSQLCPPCONN_INCLUDE)
-    target_include_directories(netsim_perf_tests PRIVATE ${MYSQLCPPCONN_INCLUDE})
+if(NOT BUILD_FUZZER AND MYSQLCPPCONN_INCLUDE)
+  target_include_directories(netsim_perf_tests PRIVATE ${MYSQLCPPCONN_INCLUDE})
 endif()
 if(WEBSOCKETPP_INCLUDE)
-    target_include_directories(netsim_perf_tests PRIVATE ${WEBSOCKETPP_INCLUDE})
+  target_include_directories(netsim_perf_tests PRIVATE ${WEBSOCKETPP_INCLUDE})
 endif()
 
-target_link_libraries(netsim_perf_tests PRIVATE 
-    GTest::gtest_main 
-    cpprestsdk::cpprest 
+target_link_libraries(netsim_perf_tests PRIVATE
+    GTest::gtest_main
+    cpprestsdk::cpprest
     nlohmann_json::nlohmann_json
-    OpenSSL::SSL 
+    OpenSSL::SSL
     OpenSSL::Crypto
     Boost::system
     Boost::thread
     pthread
 )
-if(MYSQLCPPCONN_LIB)
-    target_link_libraries(netsim_perf_tests PRIVATE ${MYSQLCPPCONN_LIB})
+if(NOT BUILD_FUZZER AND MYSQLCPPCONN_LIB)
+  target_link_libraries(netsim_perf_tests PRIVATE ${MYSQLCPPCONN_LIB})
 endif()
 add_test(NAME netsim_perf_tests COMMAND netsim_perf_tests)
+
+# Fuzz testing target for ScenarioRunner
+if(BUILD_FUZZER)
+  if(NOT CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    message(WARNING "Fuzzing is best supported with Clang. You are using ${CMAKE_CXX_COMPILER_ID}.")
+  endif()
+
+  add_executable(scenario_fuzzer
+        src/fuzzing/ScenarioFuzzer.cpp
+        src/core/Node.cpp
+        src/core/Packet.cpp
+        src/core/Network.cpp
+        src/core/Engine.cpp
+        src/core/Host.cpp
+        src/core/Router.cpp
+        src/scenario/ScenarioTypes.cpp
+        src/scenario/ScenarioRunner.cpp
+    )
+
+  target_include_directories(scenario_fuzzer PRIVATE
+        src
+        ${Boost_INCLUDE_DIRS}
+        ${YAML_CPP_INCLUDE_DIRS}
+    )
+
+  # Add sanitizer and fuzzer flags
+  target_compile_options(scenario_fuzzer PRIVATE -fsanitize=fuzzer,address)
+  target_link_libraries(scenario_fuzzer PRIVATE
+        cpprestsdk::cpprest
+        nlohmann_json::nlohmann_json
+        OpenSSL::SSL
+        OpenSSL::Crypto
+        Boost::system
+        Boost::thread
+        pthread
+        ${YAML_CPP_LIBRARIES}
+        -fsanitize=fuzzer,address
+    )
+
+  message(STATUS "Fuzzer 'scenario_fuzzer' target created.")
+endif()
